Frameworks Mode for Update Command
mdoc now supports documenting multiple frameworks. You can use this new functionality by passing the path to a configuration file in the `-frameworks` (or `-fx` for short) parameter.

```
mdoc update -o path/to/documentationXML -frameworks path/to/frameworks.xml
```

This command will result in one XML file per framework in the `path/to/documentationXML/FrameworksIndex` folder.

``` xml
<?xml version="1.0" encoding="utf-8"?>
<Framework Name="Two">
  <Namespace Name="MyFramework.MyOtherNamespace">
    <Type Name="MyFramework.MyOtherNamespace.MyOtherClass" Id="T:MyFramework.MyOtherNamespace.MyOtherClass">
      <Member Id="M:MyFramework.MyOtherNamespace.MyOtherClass.#ctor" />
      ...
    </Type>
  </Namespace>
</Framework>
```

Configuration File

This is a sample configuration file:

``` xml
<?xml version="1.0" encoding="utf-8"?>
<Frameworks>
  <Framework Name="One" Source="One">
    <assemblySearchPath>dependencies/One</assemblySearchPath>
  </Framework>
  <Framework Name="Two" Source="Two">
    <assemblySearchPath>dependencies/Two</assemblySearchPath>
  </Framework>
</Frameworks>
```

Note that the `assemblySearchPath` is meant to house dependent assemblies that mono.cecil must be able to resolve. You can have as many as you need for each framework if you happen to have them separated into multiple folders. Also the `-L` parameter applies globally to every framework.

Frameworks Config Bootstrap

To simplify the tedium of creating the configuration file, a simple command was added that will use the folder structure to create a basic configuration file:

``` csharp
mdoc fx-bootstrap path/to/frameworks
```

This will create a file at `path/to/frameworks/frameworks.xml`, using the folders in `path/to/frameworks` as the names/paths

DocId Signatures

You can now pass a flag to add a `DocId` signature to every `Type` and `Member` node.

```
mdoc update -o out/path some.dll -use-docid
```

_please note_: framework index files will _al

--- a/mdoc/Makefile
+++ b/mdoc/Makefile
@@ -118,6 +118,27 @@ Test/DocTest.dll-v2:
 Test/DocTest-enumerations.dll: 
 	$(CSCOMPILE) $(TEST_CSCFLAGS) -unsafe -debug -optimize -target:library -out:$@ Test/DocTest-enumerations.cs
 
+Test/FrameworkTestData: Test/DocTest-addNonGeneric.dll Test/DocTest-DropNS-classic.dll Test/DocTest-DropNS-classic-secondary.dll
+	rm -rf Test/FrameworkTestData
+	mkdir Test/FrameworkTestData
+	mkdir Test/FrameworkTestData/One
+	mkdir Test/FrameworkTestData/Two
+	cp Test/DocTest-addNonGeneric.dll Test/FrameworkTestData/One/
+	cp Test/DocTest-DropNS-classic.dll Test/FrameworkTestData/One/
+	cp Test/DocTest-addNonGeneric.dll Test/FrameworkTestData/Two/
+	cp Test/DocTest-DropNS-classic-secondary.dll Test/FrameworkTestData/Two/
+	$(MONO) $(PROGRAM) fx-bootstrap Test/FrameworkTestData
+
+check-monodocer-frameworks: Test/FrameworkTestData
+	-rm -Rf Test/en.actual
+	$(MONO) $(PROGRAM) update -o Test/en.actual -frameworks Test/FrameworkTestData
+	$(DIFF) Test/en.expected-frameworks Test/en.actual
+
+check-monodocer-docid: Test/FrameworkTestData
+	-rm -Rf Test/en.actual
+	$(MONO) $(PROGRAM) update -use-docid -o Test/en.actual -frameworks Test/FrameworkTestData
+	$(DIFF) Test/en.expected-docid Test/en.actual
+
 check-monodocer-addNonGeneric: 
 	-rm -Rf Test/en.actual
 	# first, make a docset with the generic method
@@ -396,7 +417,9 @@ check-doc-tools: check-monodocer-since \
 	check-monodocer-ignore-invalid-assemblies \
 	check-monodocer-enumerations \
 	check-monodocer-dropns-multi \
-	check-monodocer-dropns-multi-withexisting
+	check-monodocer-dropns-multi-withexisting \
+	check-monodocer-frameworks \
+	check-monodocer-docid
 
 check-doc-tools-update: check-monodocer-since-update \
 	check-monodocer-importecmadoc-update \
