--- a/mdoc/mdoc.csproj
+++ b/mdoc/mdoc.csproj
@@ -69,9 +69,13 @@
     <Compile Include="Mono.Documentation\XhtmlWriter.cs" />
     <Compile Include="Mono.Documentation\exceptions.cs" />
     <Compile Include="Mono.Documentation\index.cs" />
-    <Compile Include="Mono.Documentation\preserver.cs" />
+    <Compile Include="Mono.Documentation\frameworksbootstrapper.cs" />
     <Compile Include="Consts.cs" />
     <Compile Include="Options.cs" />
+    <Compile Include="Mono.Documentation\Frameworks\FrameworkIndex.cs" />
+    <Compile Include="Mono.Documentation\Frameworks\FrameworkEntry.cs" />
+    <Compile Include="Mono.Documentation\Frameworks\FrameworkTypeEntry.cs" />
+    <Compile Include="Mono.Documentation\Frameworks\AssemblySet.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\defaulttemplate.xsl">
@@ -109,5 +113,8 @@
       <Project>{6E644802-B579-4037-9809-9CF4C7172C9D}</Project>
       <Name>monodoc</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Mono.Documentation\Frameworks\" />
   </ItemGroup>
 </Project>
