--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/mono/Lucene.Net.Light.git
 [submodule "external/Mono.Cecil"]
 	path = external/Mono.Cecil
-	url = https://github.com/mono/cecil.git
+	url = https://github.com/jbevain/cecil.git
