--- a/monodoc/monodoc.csproj
+++ b/monodoc/monodoc.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -37,16 +37,12 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Core" />
     <Reference Include="System.Configuration" />
-    <Reference Include="ICSharpCode.SharpZipLib">
-      <HintPath>..\bin\$(Configuration)\ICSharpCode.SharpZipLib.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Properties\" />
     <Folder Include="Assembly\" />
   </ItemGroup>
   <ItemGroup>
-      <Compile Include="..\external\Lucene.Net.Light\src\core\Analysis\Analyzer.cs" />
+    <Compile Include="..\external\Lucene.Net.Light\src\core\Analysis\Analyzer.cs" />
     <Compile Include="..\external\Lucene.Net.Light\src\core\Analysis\ASCIIFoldingFilter.cs" />
     <Compile Include="..\external\Lucene.Net.Light\src\core\Analysis\BaseCharFilter.cs" />
     <Compile Include="..\external\Lucene.Net.Light\src\core\Analysis\CachingTokenFilter.cs" />
@@ -706,6 +702,12 @@
     <Content Include="monodoc.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\external\SharpZipLib\ICSharpCode.SharpZipLib.NET45\ICSharpCode.SharpZipLib.csproj">
+      <Project>{0e7413ff-eb9e-4714-acf2-be3a6a7b2ffd}</Project>
+      <Name>ICSharpCode.SharpZipLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
