Forced check for TBA as default for comparereport, added 'no-check-TBA' option

--- a/tools/DocStat/DocStat.Tests/DocStat.Tests.csproj
+++ b/tools/DocStat/DocStat.Tests/DocStat.Tests.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EcmaXmlHelperTests.cs" />
+    <Compile Include="CommandUtilsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -44,6 +45,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="TestData\currentxml\newType.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="TestData\currentxml\AVAssetImageGeneratorCompletionHandler.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="TestData\oldxml\AVAssetImageGeneratorCompletionHandler.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
