--- a/mdoc/mdoc.Test/mdoc.Test.csproj
+++ b/mdoc/mdoc.Test/mdoc.Test.csproj
@@ -50,6 +50,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="cppcli\cppcli\cppcli.h">
+      <Link>SampleClasses\cppcli.h</Link>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\mdoc.csproj">
@@ -63,6 +66,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SampleClasses\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="cppcli\Debug\cppcli.dll">
+      <Link>SampleClasses\cppcli.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
