mdoc: now using a new resolver, that resolves mscorlib (v255.255.255.255) assemblies using .net 4.5 Closes #29

--- a/mdoc/mdoc.csproj
+++ b/mdoc/mdoc.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Mono.Documentation\Frameworks\FrameworkEntry.cs" />
     <Compile Include="Mono.Documentation\Frameworks\FrameworkTypeEntry.cs" />
     <Compile Include="Mono.Documentation\Frameworks\AssemblySet.cs" />
+    <Compile Include="Mono.Documentation\Frameworks\UwpResolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\defaulttemplate.xsl">
